Might have fixed spike removal, Definitiely fixed the Neo4j Import

--- a/feature_engineering/quick_spectra_cleaning.ipynb
+++ b/feature_engineering/quick_spectra_cleaning.ipynb
@@ -594,221 +594,8 @@
    "source": [
     "# Optional Scaling\n",
     "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: normalise(x))\n",
-    "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: vector_normalise(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SpecID</th>\n",
-       "      <th>Seq</th>\n",
-       "      <th>WaveNumber</th>\n",
-       "      <th>Absorbance</th>\n",
-       "      <th>SurID</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Baseline</th>\n",
-       "      <th>Baseline_Corrected_Absorbance</th>\n",
-       "      <th>Smooth_Baseline_Corrected</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>293</td>\n",
-       "      <td>400.22778</td>\n",
-       "      <td>1765.6628</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1722.845684</td>\n",
-       "      <td>42.817116</td>\n",
-       "      <td>41.863303</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>294</td>\n",
-       "      <td>400.91116</td>\n",
-       "      <td>1774.7809</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1722.675011</td>\n",
-       "      <td>52.105889</td>\n",
-       "      <td>41.803843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>295</td>\n",
-       "      <td>401.59454</td>\n",
-       "      <td>1769.0302</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1722.504338</td>\n",
-       "      <td>46.525862</td>\n",
-       "      <td>41.741884</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>296</td>\n",
-       "      <td>402.27789</td>\n",
-       "      <td>1756.4220</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1722.333665</td>\n",
-       "      <td>34.088335</td>\n",
-       "      <td>41.677722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>297</td>\n",
-       "      <td>402.96127</td>\n",
-       "      <td>1758.8690</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>1722.162992</td>\n",
-       "      <td>36.706008</td>\n",
-       "      <td>41.611654</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023277</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2337</td>\n",
-       "      <td>1797.03870</td>\n",
-       "      <td>1617.3926</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "      <td>1617.650379</td>\n",
-       "      <td>-0.257779</td>\n",
-       "      <td>12.378163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023278</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2338</td>\n",
-       "      <td>1797.72200</td>\n",
-       "      <td>1633.0911</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "      <td>1616.718912</td>\n",
-       "      <td>16.372188</td>\n",
-       "      <td>13.269937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023279</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2339</td>\n",
-       "      <td>1798.40550</td>\n",
-       "      <td>1633.3076</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "      <td>1615.787446</td>\n",
-       "      <td>17.520154</td>\n",
-       "      <td>14.199285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023280</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2340</td>\n",
-       "      <td>1799.08890</td>\n",
-       "      <td>1641.8665</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "      <td>1614.855979</td>\n",
-       "      <td>27.010521</td>\n",
-       "      <td>15.166531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023281</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2341</td>\n",
-       "      <td>1799.77220</td>\n",
-       "      <td>1618.2405</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "      <td>1613.924513</td>\n",
-       "      <td>4.315987</td>\n",
-       "      <td>16.171997</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6239205 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              SpecID   Seq  WaveNumber  Absorbance     SurID         Status  \\\n",
-       "293      201210-1-00   293   400.22778   1765.6628  201210-1         Normal   \n",
-       "294      201210-1-00   294   400.91116   1774.7809  201210-1         Normal   \n",
-       "295      201210-1-00   295   401.59454   1769.0302  201210-1         Normal   \n",
-       "296      201210-1-00   296   402.27789   1756.4220  201210-1         Normal   \n",
-       "297      201210-1-00   297   402.96127   1758.8690  201210-1         Normal   \n",
-       "...              ...   ...         ...         ...       ...            ...   \n",
-       "8023277  210526-3-09  2337  1797.03870   1617.3926  210526-3  Hyperglycemia   \n",
-       "8023278  210526-3-09  2338  1797.72200   1633.0911  210526-3  Hyperglycemia   \n",
-       "8023279  210526-3-09  2339  1798.40550   1633.3076  210526-3  Hyperglycemia   \n",
-       "8023280  210526-3-09  2340  1799.08890   1641.8665  210526-3  Hyperglycemia   \n",
-       "8023281  210526-3-09  2341  1799.77220   1618.2405  210526-3  Hyperglycemia   \n",
-       "\n",
-       "            Baseline  Baseline_Corrected_Absorbance  Smooth_Baseline_Corrected  \n",
-       "293      1722.845684                      42.817116                  41.863303  \n",
-       "294      1722.675011                      52.105889                  41.803843  \n",
-       "295      1722.504338                      46.525862                  41.741884  \n",
-       "296      1722.333665                      34.088335                  41.677722  \n",
-       "297      1722.162992                      36.706008                  41.611654  \n",
-       "...              ...                            ...                        ...  \n",
-       "8023277  1617.650379                      -0.257779                  12.378163  \n",
-       "8023278  1616.718912                      16.372188                  13.269937  \n",
-       "8023279  1615.787446                      17.520154                  14.199285  \n",
-       "8023280  1614.855979                      27.010521                  15.166531  \n",
-       "8023281  1613.924513                       4.315987                  16.171997  \n",
-       "\n",
-       "[6239205 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
+    "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: vector_normalise(x))\n",
+    "# df['Smooth_Baseline_Corrected'] = df.groupby('SpecID')['Smooth_Baseline_Corrected'].transform(lambda x: svn_normalise(x))"
    ]
   },
   {
