Moved functions to an external python file, to improve portability and notebook aesthetics

--- a/GroupKFold_feature_engineering/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
+++ b/GroupKFold_feature_engineering/GroupKFold_Parrallel_Baseline_Correction_and_Smoothing_Cross_Validation.ipynb
@@ -42,7 +42,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import cross_validate, GroupKFold\n",
-    "from joblib import Parallel, delayed\n"
+    "from joblib import Parallel, delayed\n",
+    "from Spectra_Preparation_Functions import *\n"
    ]
   },
   {
@@ -54,18 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_1.csv\")\n",
-    "#df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
-    "df = pd.read_csv(\"../../data/400-1800_spike_removed.csv\")"
+    "df = pd.read_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\")\n",
+    "#df = pd.read_csv(\"../../data/400-1800_spike_removed.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
        "       '210526-3-08', '210526-3-09'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,39 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_wavelength_df(df, absorbance_col, status_col='Status'):\n",
-    "\n",
-    "    # Pivot the DataFrame to get wavelengths as columns and absorbance values\n",
-    "    wavelength_df = df.pivot(index='SpecID', columns='WaveNumber', values=absorbance_col).reset_index()\n",
-    "    wavelength_df.columns.name = None\n",
-    "\n",
-    "    # Merge with the statuses based on SpecID\n",
-    "    # Include the SurID to perform GroupKFold CV\n",
-    "    statuses_and_surface = df[['SpecID', 'SurID', status_col]].drop_duplicates()\n",
-    "    wavelength_df = pd.merge(wavelength_df, statuses_and_surface, on='SpecID')\n",
-    "\n",
-    "    # Set SpecID as the index\n",
-    "    wavelength_df = wavelength_df.set_index('SpecID')\n",
-    "\n",
-    "    return wavelength_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wavelength_df = prepare_wavelength_df(df, 'Absorbance')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -545,25 +514,14 @@
        "[5 rows x 2051 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "wavelength_df = prepare_wavelength_df(df, 'Absorbance')\n",
     "wavelength_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def normalise(absorbances):\n",
-    "    max_value = np.max(absorbances)\n",
-    "    normalised_absorbances = absorbances / max_value\n",
-    "    return normalised_absorbances"
    ]
   },
   {
@@ -575,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +732,7 @@
        "[6239205 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
