--- a/GroupKFold_feature_engineering/RF_Group_K-Fold_CV_baseline+noise_removal_parameter_tuning.ipynb
+++ b/GroupKFold_feature_engineering/RF_Group_K-Fold_CV_baseline+noise_removal_parameter_tuning.ipynb
@@ -33,14 +33,10 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
-    "from scipy import sparse\n",
-    "from scipy.sparse.linalg import spsolve\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold, GroupKFold, cross_validate\n",
-    "from sklearn.model_selection import LeavePGroupsOut"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import GroupKFold, cross_validate\n",
+    "from Spectra_Preparation_Functions import *"
    ]
   },
   {
@@ -472,35 +468,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_wavelength_df(df, absorbance_col, status_col='Status'):\n",
-    "\n",
-    "    # Pivot the DataFrame to get wavelengths as columns and absorbance values\n",
-    "    wavelength_df = df.pivot(index='SpecID', columns='WaveNumber', values=absorbance_col).reset_index()\n",
-    "    wavelength_df.columns.name = None\n",
-    "\n",
-    "    # Merge with the statuses based on SpecID\n",
-    "    # Include the SurID to perform GroupKFold CV\n",
-    "    statuses_and_surface = df[['SpecID', 'SurID', status_col]].drop_duplicates()\n",
-    "    wavelength_df = pd.merge(wavelength_df, statuses_and_surface, on='SpecID')\n",
-    "\n",
-    "    # Set SpecID as the index\n",
-    "    wavelength_df = wavelength_df.set_index('SpecID')\n",
-    "\n",
-    "    return wavelength_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "wavelength_df = prepare_wavelength_df(df, 'Absorbance')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +706,7 @@
        "[5 rows x 2051 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -977,21 +950,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalise(absorbances):\n",
-    "    max_value = np.max(absorbances)\n",
-    "    normalized_absorbances = absorbances / max_value\n",
-    "    return normalized_absorbances\n",
-    "\n",
     "df['Scaled_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: normalise(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1368,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1399,41 +1367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def modified_z_score(ys):\n",
-    "    ysb = np.diff(ys) # Differentiated intensity values\n",
-    "    median_y = np.median(ysb) # Median of the intensity values\n",
-    "    median_absolute_deviation_y = np.median([np.abs(y - median_y) for y in ysb]) # median_absolute_deviation of the differentiated intensity values\n",
-    "    modified_z_scores = [0.6745 * (y - median_y) / median_absolute_deviation_y for y in ysb] # median_absolute_deviationmodified z scores\n",
-    "    return modified_z_scores\n",
-    "    \n",
-    "# The next function calculates the average values around the point to be replaced.\n",
-    "def fixer(y,ma):\n",
-    "    threshold = 7 # binarisation threshold\n",
-    "    spikes = abs(np.array(modified_z_score(y))) > threshold\n",
-    "    y_out = y.copy()\n",
-    "    for i in np.arange(len(spikes)):\n",
-    "        if spikes[i] != 0:\n",
-    "            w = np.arange(i-ma,i+1+ma)\n",
-    "            we = w[spikes[w] == 0]\n",
-    "            if len(we) > 0:  # Check if it has at least one valid value\n",
-    "                y_out[i] = np.mean(y[we])\n",
-    "    return y_out\n",
-    "\n",
-    "def despike_group(absorbances):\n",
-    "    absorbance_data = absorbances.to_numpy()\n",
-    "    despiked_absorbance = fixer(absorbance_data, ma=10)\n",
-    "    return(despiked_absorbance)\n",
-    "\n",
     "df['Despiked_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: despike_group(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1644,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1686,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1716,43 +1659,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def baseline_als_optimized(y, lam, p, niter=10):\n",
-    "#     L = len(y)\n",
-    "#     D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
-    "#     D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
-    "#     w = np.ones(L)\n",
-    "#     W = sparse.spdiags(w, 0, L, L)\n",
-    "#     for i in range(niter):\n",
-    "#         W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
-    "#         Z = W + D\n",
-    "#         z = spsolve(Z, w*y)\n",
-    "#         w = p * (y > z) + (1-p) * (y < z)\n",
-    "#     return z\n",
-    "\n",
-    "# lam = 10 ** 8\n",
-    "# p = 0.05\n",
-    "# df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Despiked_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pybaselines.whittaker import asls\n",
-    "\n",
-    "def asls_baseline_correction(x, lam, p):\n",
-    "        corrected, _ = asls(x, lam=lam, p=p)\n",
-    "        return corrected"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1768,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1983,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2251,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2400,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2644,7 +2550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2677,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2686,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2710,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2724,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2733,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2759,7 +2665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2768,7 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2785,7 +2691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2799,7 +2705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2808,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2834,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2843,7 +2749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2867,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2881,7 +2787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2890,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2907,7 +2813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2916,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2925,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2965,7 +2871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2982,7 +2888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2991,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3000,7 +2906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3024,21 +2930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def vector_normalise(absorbances):\n",
-    "    l2_norm = np.sqrt(np.sum(absorbances**2))  # Calculate the euclidean norm\n",
-    "    normalized_absorbances = absorbances / l2_norm\n",
-    "    return normalized_absorbances\n",
-    "\n",
-    "df['Vector_Scaled_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: vector_normalise(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3047,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3056,7 +2948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3087,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3096,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3105,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3411,20 +3303,6 @@
    "metadata": {},
    "source": [
     "Try Min-Max Scaling Instead"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def min_max_scale(absorbances):\n",
-    "    min_value = np.min(absorbances)\n",
-    "    max_value = np.max(absorbances)\n",
-    "    return (absorbances - min_value) / (max_value - min_value)\n",
-    "\n",
-    "df['MinMax_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: min_max_scale(x))"
    ]
   },
   {
