Added Parameter Search

--- a/GroupKFold_feature_engineering/Extra_Trees_and_Spectra_Cleaning_Demonstration.ipynb
+++ b/GroupKFold_feature_engineering/Extra_Trees_and_Spectra_Cleaning_Demonstration.ipynb
@@ -44,7 +44,7 @@
     "from scipy.signal import savgol_filter\n",
     "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import GroupKFold, cross_validate"
+    "from sklearn.model_selection import GroupKFold, cross_validate, GridSearchCV"
    ]
   },
   {
